--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,12 +66,38 @@ jobs:
         pattern: release_*
         merge-multiple: true
 
+    - name: Get Last Release
+      id: last-release
+      uses: cardinalby/git-get-release-action@v1
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      with:
+        latest: true
+        prerelease: ${{ inputs.branch != 'main' }}
+
+    - name: Get Generated Release Notes
+      id: generate-notes
+      uses: actions/github-script@v7
+      with:
+        github-token: ${{ github.token }}
+        result-encoding: string
+        script: |
+          const { data } = await github.rest.repos.generateReleaseNotes({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            tag_name: 'v${{ inputs.version }}',
+            target_commitish: 'v${{ github.sha }}',
+            previous_tag_name: '${{ steps.last-release.outputs.tag_name }}',
+          })
+          return data.body
+
     - name: Create release
       uses: ncipollo/release-action@v1
       with:
         artifacts: _artifacts/Sonarr.*
         commit: ${{ github.sha }}
-        generateReleaseNotes: true
+        generateReleaseNotes: false
+        body: ${{ steps.generate-notes.outputs.result }}
         name: ${{ inputs.version }}
         prerelease: ${{ inputs.branch != 'main' }}
         skipIfReleaseExists: true
