fixup! Fix merge conflict labeling

--- a/.github/workflows/conflict_labeler.yml
+++ b/.github/workflows/conflict_labeler.yml
@@ -13,14 +13,13 @@ jobs:
   label:
     name: Labeling
     runs-on: ubuntu-latest
-    if: ${{ github.repository == 'Sonarr/Sonarr' }}
+    if: ${{ github.repository == 'markus101/Sonarr' }}
     permissions:
       contents: read
       pull-requests: write
     steps:
       - name: Apply label
         uses: eps1lon/actions-label-merge-conflict@v3
-        if: ${{ github.event_name == 'push' || github.event_name == 'pull_request_target'}}
         with:
           dirtyLabel: 'merge-conflict'
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
